RequestInterceptor, logback and some refactoring